--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "store-api-wrapper",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "A store lib for making data transfer from the client to your api easily and logically",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +11,13 @@
   },
   "author": "",
   "license": "MIT",
+  "files":[
+    "LICENSE",
+    "store-api-wrapper.js",
+    "dist/",
+    "src/"
+  ],
+  "main": "store-api-wrapper.js",
   "bugs": {
     "url": "https://github.com/opus-1/store-api-wrapper/issues"
   },
