--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "",
   "license": "MIT",
-  "files":[
+  "files": [
     "LICENSE",
     "store-api-wrapper.js",
     "dist/",
@@ -23,12 +23,13 @@
   },
   "homepage": "https://github.com/opus-1/store-api-wrapper#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.13.2",
-    "gulp-babel": "^6.1.2",
     "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.13.2",
     "concat": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
+    "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.9"
   }
