--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-watch": "^4.3.9"
+    "gulp-watch": "^4.3.9",
+    "growl": "^1.9.2"
+  },
+  "dependencies": {
   }
 }
