--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "store-api-wrapper",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A store lib for making data transfer from the client to your api easily and logically",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,15 +25,19 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.13.2",
+    "blueimp-md5": "^2.3.0",
     "concat": "0.0.1-security",
+    "growl": "^1.9.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.9",
-    "growl": "^1.9.2"
+    "jquery": "^3.1.0",
+    "jsdom": "^9.4.2",
+    "mocha": "^3.0.2",
+    "mock-browser": "^0.92.12"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
